# Loungy

./: .gitignore  Cargo.toml  MyReadMe.md  README.md  build.rs  update.sh
assets/resources/windows/: mytool.rc
crates/assets/: Cargo.toml
crates/assets/src/: lib.rs
crates/loungy/: Cargo.toml  build.rs
crates/loungy/resources/windows/: loungy.rc  mytool.rc
crates/loungy/src/: README.md  app.rs  date.rs  db.rs  hotkey.rs  loader.rs  main.rs  paths.rs  query.rs  state.rs  theme.rs  window.rs  workspace.rs
crates/loungy/src/commands/: db.rs  mod.rs  registry.rs
crates/loungy/src/commands/bitwarden/: accounts.rs  list.rs
crates/loungy/src/commands/clipboard/: list.rs
crates/loungy/src/commands/matrix/: account.rs  chat.rs  client.rs  compose.rs  list.rs
crates/loungy/src/commands/menu/: list.rs
crates/loungy/src/commands/process/: list.rs
crates/loungy/src/commands/root/: list.rs  numbat.rs  numbatl.rs
crates/loungy/src/commands/tailscale/: list.rs
crates/loungy/src/commands/theme/: list.rs
crates/loungy/src/components/: form.rs
crates/loungy/src/components/list/: mod.rs  nucleoo.rs
crates/loungy/src/components/shared/: mod.rs
crates/loungy/src/ipc/: client.rs  server.rs
crates/loungy/src/platform/: mac.rs  mod.rs  window.rs
crates/loungy/src/platform/linux/: desktop_file.rs  mod.rs
docs/: bitwarden.md
src/: app.rs  db.rs  hotkey.rs  lib.rs  loader.rs  main.rs  paths.rs  query.rs  state.rs  theme.rs  window.rs  workspace.rs
src/commands/: mod.rs
src/commands/bitwarden/: accounts.rs  list.rs
src/commands/clipboard/: list.rs
src/commands/matrix/: account.rs  chat.rs  client.rs  compose.rs  list.rs
src/commands/menu/: list.rs
src/commands/process/: list.rs
src/commands/root/: list.rs  mod.rs  numbat.rs  numbatl.rs
src/commands/tailscale/: list.rs
src/commands/theme/: list.rs
src/components/: form.rs  mod.rs
src/components/list/: mod.rs  nucleoo.rs
src/components/shared/: icon.rs  mod.rs
src/ipc/: client.rs  mod.rs  server.rs
src/platform/: mac.rs  mod.rs  window.rs
src/platform/linux/: desktop_file.rs  mod.rs
