[package]
name = "loungy"
version = "0.1.3"
edition = "2021"
rust-version = "1.80.0"
description = "Loungy is a WIP launcher in the vein of Raycast and Alfred."

[package.metadata.packager]
product_name = "Loungy"
identifier = "app.loungy"
copyright = "Copyright (c) Matthias Grandl 2024. All rights reserved."
category = "Productivity"
target_triple = "universal-apple-darwin"
icons = ["icons/*.png"]

[package.metadata.packager.macos]
entitlements = "macos/entitlements.plist"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
swift-rs = { version = "1.0.7", features = ["build"] }

[dependencies]
catppuccin = "1.4.0"
global-hotkey = "0.4.2"
tokio = { version = "1.48.0", features = ["full"] }

gpui = "0.2.2"
gpui-macros = "0.2.2"
gpui-component = { git = "https://github.com/linruohan/gpui-component.git" }
gpui-component-assets = { git = "https://github.com/linruohan/gpui-component.git" }
nucleo = "0.3.0"
parking_lot = "0.12.5"
serde = "1.0.228"
serde_json = "1.0.145"
numbat = "1.16.0"
numbat-exchange-rates = "0.5.0"
whoami = { version = "1.6.1", default-features = false }
anyhow = "1.0.100"
rust-embed = "8.9.0"
regex = "1.12.2"
bonsaidb = { version = "0.5.0", features = ["local-full"] }
log = "0.4.29"
toml = "0.8.23"
env_logger = "0.11.8"
url = "2.5.7"
futures = "0.3.31"
matrix-sdk-crypto = { version = "0.7.2", optional = true }
matrix-sdk = { version = "0.7.1", default-features = false, optional = true, features = [
    "e2e-encryption",
    "markdown",
    "socks",
    "anyhow",
    "image-proc",
    "experimental-sliding-sync",
    "sqlite",
    "bundled-sqlite",
    "native-tls",
] }
matrix-sdk-ui = { version = "0.7.0", optional = true }
rand = "0.8.5"
arboard = { version = "3.6.1", optional = true }
image = "0.23"
crossbeam-channel = "0.5.15"
reqwest = "0.11.27"
quick-xml = "0.31.0"
scraper = "0.19.1"
clap = { version = "4.5.53", features = ["cargo", "derive", "string"] }
notify = "6.1.1"
notify-debouncer-full = "0.3.2"
jiff = { version = "0.1.29", features = ["serde"] }
smol = "2.0.2"



[target.'cfg(target_os = "macos")'.dependencies]
swift-rs = "1.0.7"
cocoa = "0.25.0"

[target.'cfg(target_os = "linux")'.dependencies]
freedesktop_entry_parser = "1.3.0"
freedesktop-icons = "0.2.6"
walkdir = "2.5.0"
[target.'cfg(target_os = "windows")'.build-dependencies]
naga = { version = "27.0.3", features = ["wgsl-in"] }
embed-resource = "3.0.6"
winresource = "0.1.28"
[features]
tailscale = []
bitwarden = []
clipboard = ["dep:arboard"]
matrix = ["dep:matrix-sdk", "dep:matrix-sdk-crypto", "dep:matrix-sdk-ui"]

[[bin]]
name = "loungy"
