[workspace.package]
publish = false
edition = "2024"
[workspace]
members = ["crates/assets", "crates/loungy"]

default-members = ["crates/loungy"]
resolver = "2"

[workspace.dependencies]
loungy = { path = "crates/loungy" }
loungy-assets = { path = "crates/assets" }

gpui = "0.2.2"
gpui-macros = "0.2.2"
gpui-component = { git = "https://github.com/linruohan/gpui-component.git" }
gpui-component-assets = { git = "https://github.com/linruohan/gpui-component.git" }
catppuccin = "1.4.0"
global-hotkey = "0.4.2"
tokio = { version = "1.48.0", features = ["full"] }
nucleo = "0.3.0"
parking_lot = "0.12.5"
arboard = { version = "3.6.1" }
serde = "1.0.228"
serde_json = "1.0.145"
numbat = "1.16.0"
numbat-exchange-rates = "0.5.0"
whoami = { version = "1.6.1", default-features = false }
anyhow = "1.0.100"
winresource = "0.1.28"
rust-embed = "8.9.0"
regex = "1.12.2"
bonsaidb = { version = "0.5.0", features = ["local-full"] }
log = "0.4.29"
toml = "0.8.23"
env_logger = "0.11.8"
url = "2.5.7"
futures = "0.3.31"
rand = "0.8.5"
image = "0.23"
crossbeam-channel = "0.5.15"
reqwest = "0.11.27"
quick-xml = "0.31.0"
scraper = "0.19.1"
clap = { version = "4.5.53", features = ["cargo", "derive", "string"] }
notify = "6.1.1"
notify-debouncer-full = "0.3.2"
jiff = { version = "0.1.29", features = ["serde"] }
smol = "2.0.2"


[workspace.lints.clippy]
almost_complete_range = "allow"
arc_with_non_send_sync = "allow"
borrowed_box = "allow"
dbg_macro = "deny"
let_underscore_future = "allow"
map_entry = "allow"
module_inception = "allow"
non_canonical_partial_ord_impl = "allow"
reversed_empty_ranges = "allow"
single_range_in_vec_init = "allow"
style = { level = "allow", priority = -1 }
todo = "deny"
type_complexity = "allow"

[profile.dev]
codegen-units = 16
split-debuginfo = "unpacked"
opt-level = 2
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
rpath = false
# 禁用debug
debug = 0
strip = "debuginfo"

[profile.dev.package]
resvg = { opt-level = 3 }
rustybuzz = { opt-level = 3 }
taffy = { opt-level = 3 }
ttf-parser = { opt-level = 3 }

[profile.release]
opt-level = 3
lto = true
codegen-units = 8
strip = true
debug = false
