[workspace.package]
publish = false
edition = "2024"

[workspace]
members = ["crates/assets", "crates/loungy"]

default-members = ["crates/loungy"]
resolver = "2"

[workspace.dependencies]
loungy = { path = "crates/loungy" }
loungy-assets = { path = "crates/assets" }

catppuccin = "1.3.0"
global-hotkey = "0.4.2"
gpui = { git = "https://github.com/zed-industries/zed" }
#gpui-macros = "0.2.2"
#gpui-component = { git = "https://github.com/linruohan/gpui-component.git" }
gpui-component-assets = { git = "https://github.com/linruohan/gpui-component.git" }
tokio = { version = "1.48.0", features = ["full"] }
embed-resource = "3.0.6"
winresource = "0.1.28"
nucleo = "0.3.0"
parking_lot = "0.12.1"
serde = "1.0.195"
serde_json = "1.0.111"
numbat = "1.10.0"
numbat-exchange-rates = "0.5.0"
whoami = { version = "1.4.1", default-features = false }
anyhow = "1.0.79"
rust-embed = { version = "8.9.0", features = ["include-exclude", "interpolate-folder-path"] }
regex = "1.10.3"
bonsaidb = { version = "0.5.0", features = ["local-full"] }
log = "0.4.20"
toml = "0.8.10"
env_logger = "0.11.1"
url = "2.5.0"
async-std = { version = "1.12.0", features = [
    "unstable",
    "attributes",
    "tokio1",
] }
futures = "0.3.30"
matrix-sdk-crypto = { version = "0.7.0" }
matrix-sdk = { version = "0.7.1", default-features = false, features = [
    "e2e-encryption",
    "markdown",
    "socks",
    "anyhow",
    "image-proc",
    "experimental-sliding-sync",
    "sqlite",
    "bundled-sqlite",
    "native-tls",
] }
matrix-sdk-ui = { version = "0.7.0" }
rand = "0.8.5"
arboard = { version = "3.3.1" }
image = "0.23"
crossbeam-channel = "0.5.12"
reqwest = "0.11.24"
quick-xml = "0.31.0"
scraper = "0.19.0"
clap = { version = "4.5.7", features = ["cargo", "derive", "string"] }
notify = "6.1.1"
notify-debouncer-full = "0.3.1"
jiff = { version = "0.1.3", features = ["serde"] }
smol = "2.0.2"
windows = { version = "0.60.0", features = ["Win32_Foundation", "Win32_UI_Shell", "Win32_System_Com", "Win32_System_LibraryLoader", "Win32_UI_WindowsAndMessaging", "Win32_System_DataExchange", "Win32_System_Ole", "Win32_UI_Input", "Win32_System_Memory", "Win32_UI_Input_KeyboardAndMouse", "Win32_Graphics_Gdi", "Win32_System_Registry"] }
md5 = "0.8.0"

[workspace.lints.clippy]
almost_complete_range = "allow"
arc_with_non_send_sync = "allow"
borrowed_box = "allow"
dbg_macro = "deny"
let_underscore_future = "allow"
map_entry = "allow"
module_inception = "allow"
non_canonical_partial_ord_impl = "allow"
reversed_empty_ranges = "allow"
single_range_in_vec_init = "allow"
style = { level = "allow", priority = -1 }
todo = "deny"
type_complexity = "allow"

[profile.dev]
codegen-units = 16
split-debuginfo = "unpacked"
opt-level = 2
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
rpath = false
# 禁用debug
debug = 0
strip = "debuginfo"

[profile.dev.package]
resvg = { opt-level = 3 }
rustybuzz = { opt-level = 3 }
taffy = { opt-level = 3 }
ttf-parser = { opt-level = 3 }

[profile.release]
opt-level = 3
lto = true
codegen-units = 8
strip = true
debug = false
