[package]
name = "loungy"
version = "0.1.0"
publish = false
edition.workspace = true

[package.metadata.packager]
product_name = "Loungy"
icons = ["icons/*.png"]

[package.metadata.packager.macos]
entitlements = "macos/entitlements.plist"

[dependencies]
loungy-assets.workspace=true
gpui.workspace=true
gpui-macros.workspace=true
gpui-component.workspace=true
rust-embed = { version = "8.9.0", features = ["interpolate-folder-path"] }
arboard={version="3.6.1",optional=true}
matrix-sdk-crypto = { version = "0.7.2", optional=true }
matrix-sdk = { version = "0.7.1", default-features = false, optional=true, features = [
    "e2e-encryption",
    "markdown",
    "socks",
    "anyhow",
    "image-proc",
    "experimental-sliding-sync",
    "sqlite",
    "bundled-sqlite",
    "native-tls",
] }
matrix-sdk-ui = { version = "0.7.0", optional=true }

anyhow.workspace=true
bonsaidb.workspace=true
catppuccin.workspace=true
clap.workspace=true
crossbeam-channel.workspace=true
env_logger.workspace=true
futures.workspace=true
global-hotkey.workspace=true
image.workspace=true
jiff.workspace=true
log.workspace=true
tokio.workspace = true
notify.workspace=true
notify-debouncer-full.workspace=true
nucleo.workspace=true
numbat.workspace=true
parking_lot.workspace=true
rand.workspace=true
regex.workspace=true
reqwest.workspace=true
smol.workspace=true
scraper.workspace=true
serde.workspace=true
serde_json.workspace=true
toml.workspace=true
url.workspace=true
whoami.workspace=true


[lints]
workspace = true

[package.metadata.cargo-machete]
ignored = ["embed-resource", "winresource", "naga","matrix-sdk-crypto"]

[target.'cfg(target_os = "macos")'.dependencies]
swift-rs = "1.0.7"
cocoa = "0.25.0"

[target.'cfg(target_os = "linux")'.dependencies]
freedesktop_entry_parser = "1.3.0"
freedesktop-icons = "0.2.6"
walkdir = "2.5.0"

[target.'cfg(target_os = "windows")'.build-dependencies]
naga = { version = "27.0.3", features = ["wgsl-in"] }
embed-resource = "3.0.6"
winresource = "0.1.28"

[features]
tailscale = []
bitwarden = []
clipboard = ["dep:arboard"]
matrix = ["dep:matrix-sdk", "dep:matrix-sdk-crypto", "dep:matrix-sdk-ui"]

[[bin]]
name = "loungy"
