[package]
name = "loungy"
version = "0.1.3"
edition = "2021"
rust-version = "1.80.0"
description = "Loungy is a WIP launcher in the vein of Raycast and Alfred."

[package.metadata.packager]
product_name = "Loungy"
identifier = "app.loungy"
copyright = "Copyright (c) Matthias Grandl 2024. All rights reserved."
category = "Productivity"
target_triple = "universal-apple-darwin"
icons = ["icons/*.png"]

[package.metadata.packager.macos]
entitlements = "macos/entitlements.plist"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
swift-rs = { version = "1.0.6", features = ["build"] }

[dependencies]
loungy-assets.workspace = true
catppuccin.workspace = true
global-hotkey.workspace = true
gpui.workspace = true
nucleo.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
numbat.workspace = true
numbat-exchange-rates.workspace = true
whoami.workspace = true
anyhow.workspace = true
rust-embed.workspace = true
regex.workspace = true
bonsaidb.workspace = true
log.workspace = true
toml.workspace = true
env_logger.workspace = true
url.workspace = true
async-std.workspace = true
futures.workspace = true
matrix-sdk-crypto = { workspace = true, optional = true }
matrix-sdk = { workspace = true, optional = true }
matrix-sdk-ui = { workspace = true, optional = true }
rand.workspace = true
arboard = { workspace = true, optional = true }
image.workspace = true
crossbeam-channel.workspace = true
reqwest.workspace = true
quick-xml.workspace = true
scraper.workspace = true
clap.workspace = true
notify.workspace = true
notify-debouncer-full.workspace = true
jiff.workspace = true
smol.workspace = true
windows.workspace = true
md5.workspace = true

[target.'cfg(target_os = "macos")'.build-dependencies]
swift-rs = { version = "1.0.6", features = ["build"] }

[target.'cfg(target_os = "windows")'.build-dependencies]
naga = { version = "27.0.3", features = ["wgsl-in"] }
embed-resource = "3.0.6"
winresource = "0.1.28"

[target.'cfg(target_os = "windows")'.dependencies]
naga = { version = "27.0.3", features = ["wgsl-in"] }
embed-resource = "3.0.6"
winresource = "0.1.28"

[target.'cfg(target_os = "macos")'.dependencies]
swift-rs = "1.0.6"
cocoa = "0.25.0"

[target.'cfg(target_os = "linux")'.dependencies]
freedesktop_entry_parser = "1.3.0"
freedesktop-icons = "0.2.6"
walkdir = "2.5.0"


[features]
tailscale = []
bitwarden = []
clipboard = ["dep:arboard"]
matrix = ["dep:matrix-sdk", "dep:matrix-sdk-crypto", "dep:matrix-sdk-ui"]

[[bin]]
name = "loungy"

[lints]
workspace = true

[package.metadata.cargo-machete]
ignored = ["embed-resource", "winresource", "naga", "matrix-sdk-crypto"]
